<resources>
    <string name="app_name">SLCRAFT</string>
    <string name="card_holder_details">Card holder details</string>
    <string name="required_filed">* Required filed</string>
    <string name="full_name">Full Name *</string>
    <string name="address">Address *</string>
    <string name="e_mail_address">E mail Address *</string>
    <string name="contact_number">Contact Number *</string>
</resources>